--- a/.github/workflows/ec2_aws_deploy.yml
+++ b/.github/workflows/ec2_aws_deploy.yml
@@ -36,6 +36,7 @@ jobs:
           docker rmi app || true
           docker build --build-arg JWT_SECRET=${{ secrets.JWT_SECRET }} \
             --build-arg EC2_HOST=${{ secrets.EC2_HOST }} \
+            --build-arg EC2_HOST=${{ secrets.EC2_DATABASE_HOST }} \
             --build-arg AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
             --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
             --build-arg AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }} \
@@ -47,6 +48,7 @@ jobs:
           -t app .
           docker run -d -p 80:10000 --name app \
             -e EC2_HOST=${{ secrets.EC2_HOST }} \
+            -e EC2_HOST=${{ secrets.EC2_DATABASE_HOST }} \
             -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
             -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
             -e AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }} \
