--- a/.github/workflows/ec2_aws_deploy.yml
+++ b/.github/workflows/ec2_aws_deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - master
 
+#jobs:
+#  deploy:
+#    if: github.repository == '[Organization 이름]/[Organization 레포지토리 이름]'
+#    runs-on: ubuntu-22.04
 jobs:
   deploy:
     runs-on: ubuntu-22.04
@@ -25,11 +29,11 @@ jobs:
 
     - name: Copy project to EC2
       run: |
-        rsync -avz -e "ssh -i ~/.ssd/id_rsa" . ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST}}:/home/ubuntu/app
+        rsync -avz -e "ssh -i ~/.ssd/id_rsa" . ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ubuntu/app
 
     - name: Build & Run Docker on EC2
       run: |
-        ssh -i ~/.ssd/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST}} << EOF
+        ssh -i ~/.ssd/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
           cd /home/ubuntu/app
           docker stop app || true
           docker rm app || true
